[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/NetworkMenu.gd" type="Script" id=2]

[node name="NetworkMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 541.0
margin_top = 330.0
margin_right = 825.0
margin_bottom = 438.0
custom_constants/separation = 20

[node name="Host" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 284.0
margin_bottom = 44.0
text = "Start Network Game"

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 284.0
margin_bottom = 108.0
text = "Join Network Game"

[node name="Back" type="Button" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 89.0
margin_bottom = 49.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
